[package]
name = "winapi-tlb-bindgen"
version = "0.1.0"
authors = ["Arnavion <arnavion@gmail.com>"]

[dependencies]
clap = "2.23.x"
derive-error-chain = "0.10.x"
error-chain = "0.10.x"
winapi = { git = "https://github.com/retep998/winapi-rs/", rev = "6e050acf6cf0e279be366101ae6cf83033837840", features = ["objbase", "oleauto", "winerror"] }

[profile.dev]
panic = "abort"
