[package]
name = "winapi-tlb-bindgen"
version = "0.1.0"
authors = ["Arnavion <arnavion@gmail.com>"]

[dependencies]
clap = "2.23.x"
derive-error-chain = "0.10.x"
error-chain = "0.10.x"
winapi = { git = "https://github.com/retep998/winapi-rs/", rev = "e651f98e21f2c6e20c20fd713c1ebc909012874e", features = ["objbase", "oleauto", "winerror"] }

[profile.dev]
panic = "abort"
