[package]
name = "winapi-tlb-bindgen"
version = "0.1.0"
authors = ["Arnavion <arnavion@gmail.com>"]

[dependencies]
clap = "2.23.x"
derive-error-chain = "0.10.x"
error-chain = "0.10.x"
winapi = { git = "https://github.com/retep998/winapi-rs/", rev = "7338a5216a6a7abeefcc6bb1bc34381c81d3e247", features = ["objbase", "oleauto", "winerror"] }

[profile.dev]
panic = "abort"
