[package]
name = "test-msxml"
version = "0.1.0"
authors = ["Arnavion <arnavion@gmail.com>"]
publish = false

[dependencies]
winapi = { version = "0.3.x", features = ["combaseapi", "guiddef", "minwindef", "oaidl", "objbase", "oleauto", "unknwnbase", "winerror", "wtypes"] }

[build-dependencies]
winapi-tlb-bindgen = { path = "../" }
