[package]
name = "test-msxml"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Arnavion <me@arnavion.dev>"]
edition = "2018"
publish = false

[dependencies]
winapi = { version = "0.3.6", features = ["combaseapi", "guiddef", "minwindef", "oaidl", "objbase", "oleauto", "unknwnbase", "winerror", "wtypes"] }

[build-dependencies]
winapi-tlb-bindgen = { path = "../" }
