[package]
name = "test-wmi"
version = "0.1.0"
authors = ["Arnavion <arnavion@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
winapi = { version = "0.3.6", features = ["combaseapi", "guiddef", "oaidl", "objbase", "objidl", "oleauto", "rpcdce", "unknwnbase", "winerror", "winnt", "wtypes"] }

[build-dependencies]
winapi-tlb-bindgen = { path = "../" }
